# SearchEngine

CrawlerDatabase/: .project  CMakeLists.txt  certificates.txt  certificates_file_open.cpp  certificates_file_open.h  crawler_database.cpp  database_website.cpp  database_website.h  file_open.cpp  file_open.h  html_website.htm  http_connect.cpp  http_connect.h  http_connection.cpp  http_connection.h  program.ini  return_response.cpp  return_response.h  server_website.cpp  server_website.h
CrawlerDatabase/.dbeaver/: .credentials-config.json.bak  .data-sources.json.bak  .project-metadata.json.bak  credentials-config.json  data-sources.json  project-settings.json
CrowlerProgram/: CMakeLists.txt  certificates.txt  certificates_file_open.cpp  certificates_file_open.h  crawler_program.cpp  crowler_program.cpp  database_website.cpp  database_website.h  download_website.cpp  download_website.h  http_client.cpp  http_client.h  https_client.cpp  https_client.h  ini_file_open.cpp  ini_file_open.h  processing_data_site.cpp  processing_data_site.h  program.ini  thread_pool.cpp  thread_pool.h  tp_client.cpp  tp_client.h  transfer_protocol_client.cpp  transfer_protocol_client.h
libpqxx-7.9.0/lib/cmake/libpqxx/: libpqxx-targets.cmake
